2008-05-26  Michael Natterer  <mitch@imendio.com>

	* src/hildon-time-editor.c (hildon_time_editor_class_init): The
	widget_class->tap_and_hold_setup signal slot doesn't exist any
	longer, stop overriding it.

	(hildon_time_editor_init): g_signal_connect() to the
	tap-and-hold-setup signal instead.

	(hildon_time_editor_entry_keypress): add cast to fix warning.

2008-05-23  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* doc/hildon.types
	* examples/Makefile.am
	* examples/hildon-app-menu-example.c
	* src/Makefile.am
	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	* src/hildon-app-menu.h
	* src/hildon.h
	New HildonAppMenu widget

2008-05-21 Alejandro G. Castro <alex@igalia.com>

	Rearranged the inheritance of the pannable area, now it inherits
	from GtkBin. This will allow us to control the event_window and
	the allocation process of the widget, required for some effects.
	
	* src/hildon-pannable-area.h: Replaced GtkEventBox structures with
	GtkBin structures.  * src/hildon-pannable-area.c: Added the
	event_window variable.
	(hildon_pannable_area_button_press_cb):
	(hildon_pannable_area_button_release_cb):
	(hildon_pannable_area_motion_notify_cb): 
	Changed the signature of the method, now we override the event
	callback instead of connecting to the signal.

	(hildon_pannable_area_realize):
	(hildon_pannable_area_unrealize):
	(hildon_pannable_area_map):
	(hildon_pannable_area_unmap):
	(hildon_pannable_area_size_allocate):
	Added functions to control the widget construction. We add a 
	INPUT_ONLY window and we put it over the widgets inside the 
	container, this event_window handles the events.

	(hildon_pannable_area_class_init):
	Replaced the signal connections with overrides of the event 
	callbacks.
	
2008-05-20 Alejandro G. Castro <alex@igalia.com>

	Bouncing effect added when touching the borders, you can change
	the elasticity of the border changing the ELASTICITY define.
	
	* src/hildon-pannable-area.c: Added ELASTICITY define.